--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,15 @@
         android:id="@+id/textView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/ed_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="14dp"
         android:ems="10"
         android:inputType="numberDecimal"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/textView" />
+        app:layout_constraintLeft_toLeftOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView2"
@@ -43,7 +43,7 @@
         app:layout_constraintVertical_bias="0.165" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/ed_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -54,7 +54,7 @@
         app:layout_constraintLeft_toLeftOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/b_bmi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -62,18 +62,18 @@
         android:layout_marginTop="16dp"
         android:text="CALCULATE bMI"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/editText4"
+        app:layout_constraintLeft_toLeftOf="@+id/ed_height"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintTop_toBottomOf="@+id/ed_height" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/b_help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="-8dp"
         android:layout_marginTop="16dp"
         android:text="INFO"
-        app:layout_constraintLeft_toLeftOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintLeft_toLeftOf="@+id/b_bmi"
+        app:layout_constraintTop_toBottomOf="@+id/b_bmi" />
 
 </android.support.constraint.ConstraintLayout>
