--- a/app/src/main/res/layout/test_relative.xml
+++ b/app/src/main/res/layout/test_relative.xml
@@ -16,7 +16,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/ed_weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
@@ -30,15 +30,15 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText"
-        android:layout_below="@+id/editText"
+        android:layout_alignLeft="@+id/ed_weight"
+        android:layout_alignStart="@+id/ed_weight"
+        android:layout_below="@+id/ed_weight"
         android:layout_marginTop="13dp"
         android:text="Height"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/ed_height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -49,22 +49,22 @@
         android:layout_alignStart="@+id/textView4" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/b_bmi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CALCULATE bMI"
         android:layout_marginTop="17dp"
-        android:layout_below="@+id/editText3"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_alignStart="@+id/editText3" />
+        android:layout_below="@+id/ed_height"
+        android:layout_alignLeft="@+id/ed_height"
+        android:layout_alignStart="@+id/ed_height" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/b_help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button3"
-        android:layout_alignStart="@+id/button3"
-        android:layout_below="@+id/button3"
+        android:layout_alignLeft="@+id/b_bmi"
+        android:layout_alignStart="@+id/b_bmi"
+        android:layout_below="@+id/b_bmi"
         android:layout_marginTop="21dp"
         android:text="INFO" />
 </RelativeLayout>
